test/test_units/test_kclvm/test_types/invalid_test_data/protocol/protocol_2.k
import pkg

schema DataProtocol:
    data: str

schema DataMixin for pkg.DataProtocol:
    x: int = data
